[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-remote-server"
version = "0.1.0"
description = "Authenticated relay server for Codex Remote"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["codex", "remote", "relay", "server"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.9,<4",
  "cryptography>=42,<46",
]
license = {file = "LICENSE"}

[project.scripts]
codex-remote-server = "codex_remote_server.__main__:main"

[project.urls]
Homepage = "https://github.com/Dospacite/codex_remote_server"
Repository = "https://github.com/Dospacite/codex_remote_server"
Issues = "https://github.com/Dospacite/codex_remote_server/issues"

[tool.setuptools]
packages = ["codex_remote_server"]
